apps/workflows/overlays/captest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: captest-workflows-ingress
  namespace: captest
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: argo-server
            port:
              number: 2746
        path: /workflows/
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
